--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "httpx>=0.28.1",
-    "mcp[cli]>=1.9.3",
-]
+dependencies = ["hyperleda", "httpx>=0.28.1", "mcp[cli]>=1.9.3"]
+
+[tool.uv.sources]
+hyperleda = { git = "https://github.com/HyperLEDA/client.git" }
